# chemrxiv-retrieval-audit

./: .env.example  README.md  pyproject.toml  requirements.txt
docs/: output_schema.md
scripts/: check_packet.py  compare_cpu_mps_embeddings.py  generate_packet.py
