[project]
name = "chemrxiv-retrieval-audit"
version = "0.1.0"
description = "Reproducible full-corpus ChemRxiv retrieval packet generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets>=2.19.0",
  "sentence-transformers>=3.0.0",
  "numpy>=1.26.0",
  "torch>=2.2.0",
]

[tool.uv]
package = false
